js/js.translator/testData/incremental/invalidation/removeFile/lib2/l2_1.kt

fun qux1() = foo1()